隐藏部分列

--- a/inc/inc-view/index.html
+++ b/inc/inc-view/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>欢迎使用</title>
+    <title>电子书管理平台</title>
   </head>
   <body>
     <div id="app"></div>
